# Credit_Card_Fraud_Detection

./: .gitignore  README.md  Testing.ipynb  config.py  predict.py  publish_package.sh  requirements.txt  train.py
Codebase/: Fraud_Detection_Classification.ipynb
Documentation/: Documentation-diagrams.pptx  Metadata-Dictionary-credit-card-transactions.xlsx
EDA_notebook/: Fraud_Detection_Classification.ipynb
airflow-dags/: stop-airflow.sh
airflow-dags/dags/: airflow_scheduler_dag.py  predict.py  train.py
airflow-dags/dags/utils/: util_functions.py
airflow_dags/dags/: airflow_scheduler_prediction_dag.py  airflow_scheduler_test_dag.py  airflow_scheduler_train_dag.py  train.py  util_functions.py
anonymized_fraud_detection/: README.md  pyproject.toml
anonymized_fraud_detection/src/anonymized_fraud_detection/: predict.py  train.py
anonymized_fraud_detection/src/anonymized_fraud_detection/utilities/: analytical_reporting_functions.py  models.py  util_functions.py
config_params/: config.py
fraud_detection_package/: README.md  pyproject.toml
fraud_detection_package/src/fraud_detection_package/: train_or_predict.py  util_functions.py
fraud_detection_package/src/fraud_detection_package_new/: train_or_predict.py  util_functions.py
gcp_cloud_functions/: README.md  composer2_airflow_rest_api.py  main.py  requirements.txt
gcp_cloud_functions/composer-v1/: README.md  get_client_id.py  main.py
gcp_cloud_functions/composer-v2/: README.md  main.py
google-cloud-storage-objects/: README.md
outputs/: Report_Multiswipes.csv  Report_Reversals.csv
