[build-system]
requires = ["setuptools>=61.0","scikit-learn==1.0.2","pandas==1.4.2", "google-cloud-storage", "gcsfs", "matplotlib==3.5.1"]
build-backend = "setuptools.build_meta"

[project]
name = "fraud_detection_package_new"
version = "0.0.8"
authors = [
  { name="Vikrant Deshpande", email="vikdeshp@iu.edu" },
]
description = "A small package to parse and train an ML model. Will update the readme later"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/vikrantdeshpande09876/Credit_Card_Fraud_Detection"
"Bug Tracker" = "https://github.com/vikrantdeshpande09876/Credit_Card_Fraud_Detection/issues"